--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 700a53187e462591ff45b9118ca84bde29e3be2c43e64bdf692e3d163acf0365
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
@@ -22,12 +22,13 @@ requirements:
   run:
     - python >=3.6
     - numba >=0.45
-    - scipy >=0.16,<1.6.2
+    - scipy >=0.16,<=1.7.3
     - setuptools
 
 test:
   requires:
     - pip
+    - numpy =1.22
   commands:
     - pip check
   imports:
